* Fix UI Layout Issues
* Analyse Heap Dump with lots of devices and actions
* Test on Linux especially RxTx
* Exception handling for RxTx

* use checkstyle
* add javadoc


================================================================================
 I D E A S
================================================================================
* Output folder for metadata processing
* Internationalize Messages from Arduino
* use ant for build process (jarbuilder)
* direct device control: send OFF to all that are ON when closing
* make devices moveable
* Create own Spinner for easier round delay input
* Drag&Drop Device Panels and Actions
* Disable Serial Communication Actions if No Connection is established
* Create Custom L&F with Synth or Nimbus
* Only fire association changed event if object was added/removed?
* Set Description and Color per Device
* Mark Device Type with Icons
* Sensors
	- Sensor Setup Panel
	- SensorAction starts when sensor fires (with offset and/or duration)
* Open/Close Panels
* Tabbed View (Setup, Shooting, Finish/Clean)
* Only send data if something changed since last send
* Setup Flashes without valves
* Empty valves (all, single, combination)
* Processing:
	o links for metadata edit:
		- http://www.adobe.com/devnet/xmp.html
		- http://sourceforge.net/projects/im4java/
		- http://www.sno.phy.queensu.ca/~phil/exiftool/
		- http://code.google.com/p/metadata-extractor/
	o embed Comments, Tags to EXIF
	o embed the setup information in some kind of 'code' to EXIF
	o watch folder / distribution folder
	  example workflow: Camera -> watch folder -> Droplet -> distribution folder -> Lightroom
* Logging:
	o Move logging to own window?
	o Add colored logging messages
	o Make logging level editable
	o log comments, times, setup, ... per session into file
* Graphical View of one cycle
* Automatic Action Times:
	o Offset + Duration = min. Offset of the following Action
* Viscosity Factor:
	o Factor that adapts the action times of devices